--- a/index.html
+++ b/index.html
@@ -76,6 +76,37 @@
 
         </li>
       </ul>
+
+      <h2>Comida</h2>
+      <ul>
+        <li>
+          <div class="details">
+            <h3>Arroz</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            </p>
+          </div>
+
+          <strong class="price">
+            R$37.50
+          </strong>
+
+        </li>
+        <li>
+          <div class="details">
+            <h3>feijão</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            </p>
+          </div>
+
+          <strong class="price">
+            R$17.50
+          </strong>
+
+        </li>
+      </ul>
+
     </section>
 
   </body>
